# wl-iac

./: .gitignore  Vagrantfile
ansible/: ansible.cfg  inventory  inventory_vagrant.py
ansible/provisioning/app/: deploy.yml  main.yml
ansible/provisioning/app/inventory/: hosts.ini
ansible/provisioning/app/vars/: main.yml
ansible/provisioning/elk/: main.yml
ansible/provisioning/elk/inventory/: hosts.ini
ansible/provisioning/elk/vars/: main.yml
ansible/roles/add_to_local_hosts/tasks/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml  setup-Archlinux.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/docker_network/tasks/: main.yml
ansible/roles/elasticsearch/tasks/: main.yml
ansible/roles/elasticsearch/vars/: main.yml
ansible/roles/filebeat/tasks/: main.yml
ansible/roles/filebeat/templates/: filebeat.yml.j2
ansible/roles/kibana/tasks/: main.yml
ansible/roles/kibana/vars/: main.yml
ansible/roles/logstash/meta/: main.yml
ansible/roles/logstash/tasks/: main.yml
ansible/roles/logstash/templates/: logstash_pipeline.conf.j2
ansible/roles/logstash/vars/: main.yml
ansible/roles/nginx/tasks/: main.yml
backend/: Cargo.toml
backend/docker/: Dockerfile  Dockerfile-build
backend/scripts/: build.sh  check.sh  run.sh  run_debug.sh
backend/src/: error.rs  handler.rs  lib.rs  query.rs  reject.rs  routes.rs
backend/src/model/: category.rs  datapoint.rs  mod.rs  product.rs  source.rs  wishlist.rs
scripts/: create_kibana_enrollment_token.sh  deploy_backend.sh
terraform/: main.tf
(+1 files in other folders)
