[package]
name = "wishlist"
version = "0.1.0"
authors = ["Jakob Fischer <jakobfischer93@gmail.com>"]
edition = "2018"

[dependencies]

log = "^0.4"
log4rs = "^0.13"
env_logger = "^0.6"
chrono = "^0.4"
warp = "^0.2"
tokio = { version = "^0.2", features = ["macros"] }
dotenv = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
mongodb = "^1.1"
bson = "^1.1"
lazy_static = "^1.4"
